# docs/swagger.json
@@ -342,7 +342,7 @@
                 }
             }
         },
-        "/api/obj/msg/paging/{page}/{limit}": {
+        "/api/obj/msg/paging/{page}/{limit}/{objid}": {
             "get": {
                 "description": "Obj messages 페이징 조회",
                 "produces": [
@@ -364,6 +364,13 @@
                         "type": "string",
                         "description": "조회갯수제한",
                         "name": "limit",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "오브제 ID 값",
+                        "name": "objid",
                         "in": "path",
                         "required": true
                     }
@@ -870,6 +877,7 @@
                     "type": "string"
                 },
                 "created_time": {
+                    "description": "Snap           string    `gorm:\"column:snap\" json:\"snap\"`\nMetadata       string    `gorm:\"column:metadata\" json:\"metadata\"`\nMessage_role   string    `gorm:\"column:message_role\" json:\"message_role\"` // MSG Role을 여기서 주어야 하는가..에 대한 의문.\nMessage_amount int       `gorm:\"column:message_amount\" json:\"message_amount\"`",
                     "type": "string"
                 },
                 "description": {
@@ -881,16 +889,6 @@
                 "image_url": {
                     "type": "string"
                 },
-                "message_amount": {
-                    "type": "integer"
-                },
-                "message_role": {
-                    "description": "MSG Role을 여기서 주어야 하는가..에 대한 의문.",
-                    "type": "string"
-                },
-                "metadata": {
-                    "type": "string"
-                },
                 "name_en": {
                     "type": "string"
                 },
@@ -898,9 +896,6 @@
                     "type": "string"
                 },
                 "properties": {
-                    "type": "string"
-                },
-                "snap": {
                     "type": "string"
                 },
                 "thumbnail_url": {
